src/objects/Financial_Account__c.object
<CustomObject>
    <description>Enter in the Account Name.</description>
    <fields>
        <fullName>A_P_Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/P Trade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Sheet_Sub_Type__c</fullName>
        <label>Balance Sheet Sub Type</label>
        <picklist>
            <controllingField>Balance_Sheet_Type__c</controllingField>
            <picklistValues>
                <fullName>Accounts Payable - Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accrued Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings Building Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash, Receivables and Investments for Special Purposes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash and Cash Equivalents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commitments and Contingencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Portion of Long-term debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Portion of Noncurrent Receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Income Taxes - Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Income Taxes - Noncurrent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Membership Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designated Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture, Fixtures and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Certificates and Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Course and Golf Course Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Rate Swaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Long-term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasehold and Leasehold Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Accumulated Depreciation and Amortization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Allowance for Doubtful Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Replacement Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Payable, Net of Current Maturity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Property and Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Balance_Sheet_Type__c</fullName>
        <label>Balance Sheet Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member&apos;s Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Long-term Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Liabilities &amp; Members&apos; Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Liabilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Debit_Text__c - Credit_Text__c</formula>
        <label>Balance</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Control_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Text__c</fullName>
        <description>Used on the visualforce page to show current up to date Credit</description>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <formula>CASE( Category__c , &apos;Asset&apos;, &apos;Debit&apos;, &apos;Liability&apos;, &apos;Credit&apos;, &apos;Equity&apos;,&apos;Credit&apos;,&apos;Income&apos;,&apos;Credit&apos;,&apos;Expense&apos;,&apos;Debit&apos;, &apos;&apos;)</formula>
        <label>Debit/Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Text__c</fullName>
        <description>Used on the visualforce page to show current up to date Debits</description>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department2__c</fullName>
        <globalPicklist>Department</globalPicklist>
        <label>Department</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_Amount_Text__c</fullName>
        <description>Used on the visualforce page to show current up to date Journal Amount</description>
        <label>Journal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operating_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operating Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retained_Earnings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retained Earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_of_Activities_Sub_Type__c</fullName>
        <label>Statement of Activities Sub Type</label>
        <picklist>
            <controllingField>Statement_of_Activities_Type__c</controllingField>
            <picklistValues>
                <fullName>Admin &amp; General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage Cost of Goods Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Roms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depreciation &amp; Amortization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Cost of Goods Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat, Light and Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiation Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry &amp; Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Cost of Goods Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Taxes (to reclass)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs &amp; Maintenane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspent Minimum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statement_of_Activities_Type__c</fullName>
        <label>Statement of Activities Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess (deficiency) of Revenue Over Expenses before other Revenue and Expenses and Membership Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase (Decrease) in Unrestricted Net Assets(Members&apos; Equity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted Net Assets, Beginning of Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted Net Assets, End of Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depreciation &amp; Amortization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Accounts (TBD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Date the account is terminated.</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative &amp; General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquatic Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Area Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Maintenance &amp; Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness/Spa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Charges &amp; Income Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Course maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locker Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Operating Departments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnight Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Taxes &amp; Employee Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racquet Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racquet Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rentals &amp; Other Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special-purpose Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Rooms (HSKP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Shop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Tax?</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>Debit_Credit__c</columns>
        <columns>Category__c</columns>
        <columns>Balance_Sheet_Type__c</columns>
        <columns>Balance_Sheet_Sub_Type__c</columns>
        <columns>Statement_of_Activities_Type__c</columns>
        <columns>Statement_of_Activities_Sub_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Bank_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>